# app-home-services

./: .clippy.toml  .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Containerfile  README.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-container-images.yml  docker-publish.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/admin/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  state.rs
crates/auth/src/adapters/: audit_event_handler.rs  jwt_service.rs  mod.rs  postgres_session_repo.rs  postgres_user_directory.rs  postgres_user_repo.rs  redis_rate_limiter.rs
crates/auth/src/adapters/inbound/: api_doc.rs  auth_middleware.rs  health_routes.rs  login_routes.rs  logout_routes.rs  mod.rs  oauth_callback.rs  refresh_routes.rs  responses.rs
crates/auth/src/application/ports/: auth_provider.rs  mod.rs  rate_limiter.rs  session_repository.rs  user_repository.rs
crates/auth/src/application/use_cases/: login_with_google.rs  login_with_password.rs  logout.rs  refresh_token.rs
crates/auth/src/config/: auth_settings.rs  mod.rs
crates/auth/src/domain/: aggregate.rs  errors.rs  mod.rs
crates/auth/src/domain/entities/: user.rs
crates/auth/src/domain/services/: mod.rs  password_verification.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  lib.rs  rate_limiter_setup.rs
crates/infrastructure/src/rate_limiter/: memory.rs  redis.rs
crates/infrastructure/src/telemetry/: logging.rs
crates/profiles/: Cargo.toml
crates/profiles/src/adapters/inbound/: mod.rs  profile_routes.rs  responses.rs
crates/profiles/src/adapters/outbound/: mod.rs  postgres_profile_repo.rs
crates/profiles/src/application/ports/: profile_repository.rs
crates/profiles/src/application/use_cases/: get_profile.rs  update_profile.rs
crates/profiles/src/domain/: errors.rs
crates/profiles/src/domain/entities/: profile.rs
crates/profiles/src/domain/value_objects/: avatar_url.rs  bio.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: api.rs  auth.rs  event_bus.rs  lib.rs  user_directory.rs
crates/shared/src/config/: settings.rs
crates/shared/src/domain/: errors.rs  mod.rs
crates/shared/src/domain/events/: mod.rs  session_refreshed.rs  user_created.rs  user_logged_in.rs  user_logged_out.rs
crates/shared/src/domain/value_objects/: access_token.rs  auth_method.rs  auth_provider.rs  email.rs  event_type.rs  hashed_password.rs  mod.rs  refresh_token.rs  token_pair.rs
docs/: alerting.md  redis-security.md
docs/adr/: 0001-modular-monolith.md
docs/modules/: admin.md  auth.md  infrastructure.md  profiles.md  shared.md
migrations/: 001_create_users_table.sql  002_create_user_actions_table.sql  003_create_sessions_table.sql  004_extend_user_actions.sql  005_add_auth_method_to_sessions.sql  006_create_user_profiles_table.sql  007_add_role_to_users.sql  008_create_admin_user_roles.sql
prometheus/: alerts.yml
scripts/: run-postgres-dev.ps1  test-with-podman.ps1
specs/001-user-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-audit-security-hardening/: data-model.md  plan.md  (+4 more)
src/: api_doc.rs  health.rs  lib.rs  main.rs
tests/: markdown_contract_consistency.rs  openapi_coverage.rs  openapi_spec_served.rs  openapi_validity.rs  responses_serde.rs
(+105 files in other folders)
