[package]
name = "app-home-services"
version = "0.1.0"
edition = "2024"
description = "App Home Services - User Authentication"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "uuid", "runtime-tokio", "chrono", "migrate"] }
bcrypt = "0.16"
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
async-trait = "0.1"
tower-http = { version = "0.7", features = ["cors"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
utoipa = { version = "5.5", features = ["uuid", "preserve_path_order"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
