[package]
name = "profiles"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
sqlx = { version = "0.9", features = ["postgres", "uuid", "runtime-tokio", "chrono"] }
axum = "0.8"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
utoipa = { version = "5.5", features = ["uuid"] }
